Changed attribute type from String to LocalDate (startTime, endTime) Added /getimagestime2 API (return array of imagestime) adjusted /getimage and /getimagestime API to produce "application/json" instead of String Updated TODO

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-- Api(subProduct) (return list les date dial les image)
-- Api(subProduct, datetime) (return url/msg err)
+(done) - Api(subProduct) (return list les date dial les image)
+(done) - Api(subProduct, datetime) (return url/msg err)
 - Spring sec with Rest
     -
     -
